--- a/texto.html
+++ b/texto.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Texto</title>
+	<title>como manejar texto</title>
 </head>
 <body>
 	<marquee> Texto interesante </marquee> <!-- se desplaza por la pantalla-->
