--- a/primerHTML5.html
+++ b/primerHTML5.html
@@ -3,6 +3,7 @@
 <head>
 		<meta charset="UTF-8"> <!-- indica en qué tipo de caracteres está -->
 		<title>Título de la página</title> <!-- ya no se necesita poner &acute; pq el navegador lo hace -->
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 		<header> <!-- etiqueta semántica (es) -->
