--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Práctica 01 CSS3</title>
 	<link rel="stylesheet"  href="css/estilos.css">
+	<link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -24,16 +25,16 @@
 			</form>
 		</nav>
 	</header>
-	<section>
+	<section id="seccion01">
 		<article>
 			<img src="img/slide2.jpg">
 		</article>
 	</section>
-	<section>
+	<section id="seccion02">
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Una sección
+			<span class="unaSeccion">Una sección</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -42,12 +43,12 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			<p></p>
-			<input type="submit" value="Ver más">
+			<input type="submit" value="Ver más" class="boton">
 		</article>
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Otra sección
+			<span class="otraSeccion">Otra sección </span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -62,12 +63,13 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			<input type="submit" value="Ver más">
+			<p></p>
+			<input type="submit" value="Ver más" class="boton">
 		</article>
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Un video
+			<span class="otraSeccion">Un video </span>
 			<br>
 			<img src="img/video.jpg">
 		</article>
