practica CSS3 01 casi terminada

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Práctica 01 CSS3</title>
 	<link rel="stylesheet"  href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald|Sansita|Yantramanav" rel="stylesheet">
 </head>
 <body>
 	<header>
