Practica CSS3 02 terminada

--- a/practica02css/index.html
+++ b/practica02css/index.html
@@ -64,7 +64,7 @@
 			Making it easy to order your printing today. Our upload facility enables you to send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for a member of our team to contact you. <p>
 			<span class="colorAzul">Upload Your File Now...</span>
 		</article>
-		<article>
+		<article id="ArtBuscar">
 			<span class="colorRosa">Stay in touch </span> <br>
 			Join our mailing list today <br>
 			<input type="email" placeholder="Email goes here">
