practica CSS3 04 -cont

--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="img/logo.png">
+		<img src="img/logo22.png" id="logo">
 		<nav>
 			<ul>
 				<li><img src="img/notificaciones.png"> </li>
@@ -16,7 +16,28 @@
 			</ul>
 		</nav>
 	</header>
-	<section></section>
-	<section></section>
+	<section id="secc01">
+		<article id="secc01art01">
+			<img src="img/panel.png">
+			<ul id="lista2">
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+				<li>Example</li>
+			</ul>
+		</article>
+		<article></article>
+	</section>
+	<section>
+		<article></article>
+		<article></article>
+		<article></article>
+	</section>
 </body>
 </html>
