practica CSS3 04 -conti

--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -32,12 +32,42 @@
 				<li>Example</li>
 			</ul>
 		</article>
-		<article></article>
+		<article id="secc01art02">
+			<form><img src="img/logoprogress.png" id="progreso"> <span class="panel">Panel with Progress</span> </form> 
+			<ul id="lista3">
+				Progress Bar
+				<li><img src="img/barra01.png" id="barra"> </li>
+				<br>
+				Progress Bar
+				<li><img src="img/barra02.png" id="barra"> </li>
+				<br>
+				Progress Bar
+				<li><img src="img/barra03.png" id="barra"> </li>
+				<br>
+				Progress Bar
+				<li><img src="img/barra04.png" id="barra"> </li>
+			</ul>
+		</article>
 	</section>
-	<section>
-		<article></article>
-		<article></article>
-		<article></article>
+	<section id="secc02">
+		<article>
+			Simple Cubes <br>
+			<img src="img/cubo1.png">
+			<img src="img/cubo02.png">
+			<img src="img/cubo03.png">
+			<img src="img/cubo04.png">
+		</article>
+		<article>
+			Panels <br>
+			<img src="img/panels.png">
+		</article>
+		<article>
+			Usuarios <br>
+			<img src="img/usuario01.png">
+			<img src="img/usuario02.png">
+			<img src="img/usuario03.png">
+			<img src="img/usuario04.png">
+		</article>
 	</section>
 </body>
 </html>
