practica CSS3 04 -terminada

--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -33,7 +33,8 @@
 			</ul>
 		</article>
 		<article id="secc01art02">
-			<form><img src="img/logoprogress.png" id="progreso"> <span class="panel">Panel with Progress</span> </form> 
+			<form><img src="img/logoprogress.png" id="progreso"> 
+				<span class="panel">Panel with Progress</span> </form> 
 			<ul id="lista3">
 				Progress Bar
 				<li><img src="img/barra01.png" id="barra"> </li>
@@ -50,23 +51,35 @@
 		</article>
 	</section>
 	<section id="secc02">
-		<article>
-			Simple Cubes <br>
-			<img src="img/cubo1.png">
-			<img src="img/cubo02.png">
-			<img src="img/cubo03.png">
-			<img src="img/cubo04.png">
+		<article id="secc02art01">
+			<span class="tituloCubos">Simple Cubes </span> <br>
+			<article id="cuboVerde"><img src="img/cubo1.png" id="cubo"> <br>
+			Lorem ipsum dolor sit <br> amet, consectetur <br> adipisicing elit </article>
+			<article id="cuboAzul"><img src="img/cubo02.png" id="cubo"><br>
+			Lorem ipsum dolor sit <br> amet, consectetur <br> adipisicing elit </article>
+			<article id="cuboLila"><img src="img/cubo03.png" id="cubo"><br>
+			Lorem ipsum dolor sit <br> amet, consectetur <br> adipisicing elit </article>
+			<article id="cuboRojo"><img src="img/cubo04.png" id="cubo"><br>
+			Lorem ipsum dolor sit <br> amet, consectetur <br> adipisicing elit </article>
 		</article>
-		<article>
+		<article id="secc02art02">
 			Panels <br>
-			<img src="img/panels.png">
+			<img src="img/panels.png" id="paneles">
 		</article>
-		<article>
+		<article id="secc02art03">
 			Usuarios <br>
-			<img src="img/usuario01.png">
-			<img src="img/usuario02.png">
-			<img src="img/usuario03.png">
-			<img src="img/usuario04.png">
+			<article><img src="img/usuario01.png" id="usuario">
+				<br>User Example <br>
+				<input type="button" value="Send Message" id="boton"></article>
+			<article><img src="img/usuario02.png" id="usuario">
+				<br>User Example <br>
+				<input type="button" value="Send Message" id="boton"></article>
+			<article><img src="img/usuario03.png" id="usuario">
+				<br>User Example <br>
+				<input type="button" value="Send Message" id="boton"></article>
+			<article><img src="img/usuario04.png" id="usuario">
+				<br>User Example <br>
+				<input type="button" value="Send Message" id="boton"></article>
 		</article>
 	</section>
 </body>
